--- a/dynamic-forms/app/views/collections/edit.html.erb
+++ b/dynamic-forms/app/views/collections/edit.html.erb
@@ -3,4 +3,5 @@
 <%= render 'form', collection: @collection %>
 
 <%= link_to 'Show', @collection %> |
+<%= link_to 'Add book', add_book_collection_path(@collection) %> |
 <%= link_to 'Back', collections_path %>
