--- a/dynamic-forms/app/views/collections/index.html.erb
+++ b/dynamic-forms/app/views/collections/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th colspan="3"></th>
+      <th colspan="4"></th>
     </tr>
   </thead>
 
@@ -16,6 +16,7 @@
         <td><%= collection.name %></td>
         <td><%= link_to 'Show', collection %></td>
         <td><%= link_to 'Edit', edit_collection_path(collection) %></td>
+        <td><%= link_to 'Add book', add_book_collection_path(collection) %></td>
         <td><%= link_to 'Destroy', collection, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
