--- a/dynamic-forms/app/views/layouts/application.html.erb
+++ b/dynamic-forms/app/views/layouts/application.html.erb
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>DynamicForms</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+<head>
+  <title>DynamicForms</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+</head>
 
-  <body>
-    <%= yield %>
+<body>
+  <header>
+    <nav>
+      <%= link_to 'Dynamic Forms Example', root_path %>
+      <%= form_with url: search_authors_url, method: :get do |f| %>
+        <%= f.label :author_name, 'Search author: ' %>
+        <%= search_field(:author, :name, name: :q, value: params[:q], minlength: 3, placeholder: 'author name',
+                         autosave: false, autocomplete: :off, list: :search_autocomplete, 'data-search': '') %>
+        <datalist id="search_autocomplete"></datalist>
+        <%= f.submit 'Search' %>
+      <% end %>
+    </nav>
+  </header>
+  <%= yield %>
   </body>
 </html>
